2003-10-13  Ion Badulescu  <ionut@moisil.badula.org>

	* amd/amfs_generic.c (amfs_bgmount): The fix for the mf_fo NULL
	pointer dereferencing was a bit too aggressive and could end up
	not processing the sublink option if the filesystem was already
	mounted. Report from Rainer Orth.

2003-10-11  Ion Badulescu  <ionut@moisil.badula.org>

	Fix restarted filesystem by disabling the amfs_inherit filesystem
	and moving the restarting logic into the generic code.

	* amd/mntfs.c (locate_mntfs): disable amfs_inherit and simply
	return the pointer to the restarted filesystem
	(free_mntfs): check for the MFF_RESTART flag instead of the
	amfs_inherit ops

	* amd/autil.c (mf_mounted): remove the MFF_RESTART flag once the
	filesystem is use

	* amd/amfs_nfsx.c (amfs_nfsx_init): only call fs_init() if the
	filesystem is not being restarted
	(amfs_nfsx_remount): if the filesystem is already mounted,
	short-circuit the code and just continue

	* amd/amfs_generic.c (amfs_bgmount): only call fs_init() if the
	filesystem is not being restarted; remove hack that was used to
	work around an amfs_inherit problem

2003-10-09  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>

	Use WebNFS to obtain file handles for mount(2).

	* NEWS: Document WebNFS support.

	* configure.in: Check for public mount option.
	* include/am_compat.h (MNTTAB_OPT_PUBLIC): Define if missing.
	* doc/am-utils.texi (opts Option): Renamed webnfs to public,
	update description.

	* amd/amd.h (FSF_WEBNFS): New mntfs flag.
	* include/am_utils.h (RPC_XID_WEBNFS): New XID type.
	
	* amd/amfs_host.c (amfs_host_mount, amfs_host_umounted): Reject
	WebNFS mount/umount attempts.
	* amd/ops_nfs.c (got_nfs_fh_mount): Renamed from got_nfs_fh.
	(got_nfs_fh_webnfs): New function.
	(flush_nfs_fhandle_cache): Don't invalidate port for WebNFS servers.
	(prime_nfs_fhandle_cache): Likewise.
	Remove unconditional return of public file handle for WebNFS, but
	get NFS file handles via mountd or WebNFS instead.
	(webnfs_lookup): New function.