@@ -20,3 +20,22 @@ else
     echo '/* auto-generated by update_build_version script */' >> $file
     echo '#define AMU_BUILD_VERSION '$vers >> $file
 fi
+
+if test -n "$USER"
+then
+  build_user="$USER"
+else
+  if test -n "$LOGNAME"
+  then
+    build_user="$LOGNAME"
+  else
+    build_user=`(whoami) 2>/dev/null` || build_user=unknown
+  fi
+fi
+echo '#define BUILD_USER "'$build_user'"' >> $file
+
+build_host=`(hostname || uname -n) 2>/dev/null` || build_host=unknown
+echo '#define BUILD_HOST "'$build_host'"' >> $file
+
+build_date=`(date) 2>/dev/null` || build_date=unknown_date
+echo '#define BUILD_DATE "'$build_date'"' >> $file
